[package]
name = "attention_smt"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9", features = [
    "cuda",
] }
anyhow = "1.0"
smtlib = { version = "0.3.0" }
